feat: 实现数据解析服务
